# steering-mechanics

./: .gitignore  CLAUDE.md  EVAL_PRINCIPLES.md  FINDINGS.md  LICENSE  LITERATURE.md  Makefile  PAPER_OUTLINE.md  README.md  RESEARCH_PLAN.md  colab_demo.ipynb  pyproject.toml  tests_steermech.py
data/: benign_prompts.txt
data/vectors/: discuss-no-tasks.intent.json  tesla.intent.json
examples/: autocalibrate.json  component_attribution.json  dose_response.json  dose_response_fine.json  head_attribution.json  head_dose.json
experiments/: autocalibrate.py  component_attribution.py  direct_logit.py  dose_response.py  head_attribution.py  head_dose.py  make_intent.py  patching.py
fig/: tug_of_war_gif.py
results/: autocalibrate_4b_document.json  autocalibrate_8b_v3_behavioral.json  campaign_llama31-8b_en.json  checker_validation.json  em_llama31-8b.json  em_qwen3-8b.json  rq1_row0_8b.json  transfer_notasks_4b.json  transfer_notasks_4b_n20.json  transfer_notasks_8b.json  transfer_notasks_8b_n20.json  transfer_notasks_qwen25_7b.json
steerbench/: README.md  TASKS.md  build.py  entries.jsonl  run.py  tasks.json  test_build.py  test_run.py
steerbench/configs/: no-tasks.example.json
steermech/: __init__.py  cli.py  client.py  discover.py  eval.py  plot.py  scrub.py
